--- a/app/views/water_infos/link.html.haml
+++ b/app/views/water_infos/link.html.haml
@@ -1,3 +1,3 @@
 %div.container 
   %br
-    =link_to "Ввести показания счетчиков горячей воды", new_water_info_path
+    =link_to "Please enter data", new_water_info_path, :id => "owner_link"
