correction number_flat

--- a/app/views/water_infos/_form.html.haml
+++ b/app/views/water_infos/_form.html.haml
@@ -19,7 +19,7 @@
         =time_tag Date.today, :format => '%B'
       %dt Номер квартиры:
       %dd 
-        = f.number_field :number_flat
+        = current_user.number_flat
     %br/
     %br/    
     
