+correction number_flat

--- a/app/views/water_infos/auditor.html.haml
+++ b/app/views/water_infos/auditor.html.haml
@@ -28,7 +28,7 @@
         %td.table-bordered{:rowspan => "2"}
           = wi.mont.month
         %td.table-bordered{:rowspan => "2"}
-          = wi.number_flat
+          = wi.user.number_flat
         %td.table-bordered{:rowspan => "2"}
           = wi.user.owner  
         %td.table-bordered
@@ -76,7 +76,7 @@
         %td.table-bordered{:rowspan => "2"}
           = wi.mont.month
         %td.table-bordered{:rowspan => "2"}
-          = wi.number_flat
+          = wi.user.number_flat
         %td.table-bordered{:rowspan => "2"}
           = wi.user.owner  
         %td.table-bordered
