--- a/app/views/water_infos/_form.html.haml
+++ b/app/views/water_infos/_form.html.haml
@@ -39,17 +39,17 @@
           %th.table-bordered  
             Горячая вода с/у:
           %td.table-bordered
-            = WaterInfo.where(:user_id => current_user.id).last.water_wc
+            = @last_water_wc
           %td.table-bordered
-            = f.number_field :water_wc, :class => "required", :min => WaterInfo.where(:user_id => current_user.id).last.water_wc
+            = f.number_field :water_wc, :class => "required", :min => @last_water_wc
           %td.table-bordered
         %tr
           %th.table-bordered  
             Горячая вода кухня:
           %td.table-bordered
-            = WaterInfo.where(:user_id => current_user.id).last.water_kitchen
+            = @last_water_kitchen
           %td.table-bordered
-            = f.number_field :water_kitchen, :class => "required", :min => WaterInfo.where(:user_id => current_user.id).last.water_kitchen
+            = f.number_field :water_kitchen, :class => "required", :min => @last_water_kitchen
           %td.table-bordered  
     %br/
     %br/
